--- a/claims/ns-scoped-claims/cluster-ns-scope.yaml
+++ b/claims/ns-scoped-claims/cluster-ns-scope.yaml
@@ -9,10 +9,11 @@ spec:
       # Possible values cluster-gcp-gke, cluster-aws-eks, cluster-azure-aks
     name: cluster-gcp-gke
   parameters:
-    # Possible values small, medium, large
-    nodeSize: small
+    location: "us-east4"
+    clusterName: "gke-cluster"
+    nodeSize: medium  # Possible values small, medium, large
     k8sVersion: "1.24"
-    fleetProject: "111111"
+    fleetProject: "111111" #GCP project ID
     minNodeCount: 2
     adminUsers:
     - example@google.com
